# efficient-literature-survey

./: CHANGELOG.md  README.md  README_EN.md  SKILL.md  extract_literature_metadata.py  extract_pdf_metadata.py  pyproject.toml  requirements.txt  test_extract_literature_metadata.py
cache/: __init__.py  manager.py
checkpoint/: manager.py
citation/: __init__.py  bibtex.py  engine.py
core/: __init__.py  config.py  constants.py  helpers.py  logging_config.py
extractors/: __init__.py  base.py  docx.py  epub.py  pdf.py  txt.py
report/: __init__.py  generator.py
