[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efficient-literature-survey"
version = "1.2.0"
description = "Batch-extract metadata from academic literature and generate structured literature reviews with 99%+ token savings."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=0.8.11",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
extract-literature-metadata = "extract_literature_metadata:main"
